--- a/_posts/2024-01-17-blog.md
+++ b/_posts/2024-01-17-blog.md
@@ -4,7 +4,7 @@ title: "Embarking on a New Journey: My First Blog Post"
 date: 2024-01-17 15:09:00
 description: Documenting my exploration in the realms of projects, learning, and self-discovery.
 tags: projects learning self-improvement
-categories: dairy
+categories: diary
 giscus_comments: true
 featured: true
 ---
@@ -31,6 +31,7 @@ I stumbled upon a LinkedIn post by a successful independent game developer frien
 6. **Stay Focused and Motivated:** Keep your eye on the prize and persevere through challenges.
 7. **Adjust Your Plan:** Be flexible and make changes if needed.
 8. **Persevere:** Don't give up, every step brings you closer to your dreams.
+
 This struck a chord with me. I realized that I have many software projects I want to complete, but my lack of focus and perseverance often left plans on the shelf.
 
 Even this blog – a project planned for years – suffered from my indecision about the technology to use. Whether delving into WordPress and PHP, exploring Ghost on a server, or recently diving into Next.js, my inconsistency held me back. This blog is my commitment to change. I'll document my progress daily and strive to make it work.
