--- a/_posts/2024-01-17-blog.md
+++ b/_posts/2024-01-17-blog.md
@@ -19,7 +19,7 @@ You may ask, "What's the big deal? The internet is flooded with countless blog p
 
 Indeed, I'm not reinventing the wheel. This blog may contain familiar elements found in many others, but I'm not here to be different. I'm here for myself – for self-expression.
 
-As a software developer, I've always considered myself a procrastinator and a perfectionist. These traits often resulted in delayed plans and an inability to settle on anything. However, a recent revelation on New Year's Day changed my perspective.
+As a human, I've always considered myself a procrastinator and a perfectionist. These traits often resulted in delayed plans and an inability to settle on anything. However, a recent revelation on New Year's Day changed my perspective.
 
 I stumbled upon a LinkedIn post by a successful independent game developer friend, Nitin Verma, who shared valuable insights on achieving goals. [Read the post here](https://www.linkedin.com/posts/nitin-verma-a70356166_things-i-learned-about-achieving-goals-after-activity-7040347210957348865-T_ho/?utm_source=share&utm_medium=member_desktop).
 
