--- a/_posts/2024-01-18-dev-env.md
+++ b/_posts/2024-01-18-dev-env.md
@@ -152,6 +152,7 @@ Dependent on your software choice, here are some recommendations:
 
 ---
 
-*Note: Your development environment is
+*Note: 
+ Your development environment is a reflection of your unique style and preferences. Feel free to explore and customize to make it truly yours!*
 
- a reflection of your unique style and preferences. Feel free to explore and customize to make it truly yours!*
+<img src="/assets/img/2024-01-18/desktop.png" height="450" width="800"/>
