--- a/_posts/2024-01-17-blog.md
+++ b/_posts/2024-01-17-blog.md
@@ -6,7 +6,7 @@ description: Documenting my exploration in the realms of projects, learning, and
 tags: projects learning self-improvement
 categories: diary
 giscus_comments: true
-featured: true
+featured: false
 ---
 
 Greetings to everyone who has stumbled upon this page – welcome to my humble blog!
