--- a/_posts/2024-01-18-dev-env.md
+++ b/_posts/2024-01-18-dev-env.md
@@ -6,7 +6,7 @@ description: Discover the intricacies of my personalized development setup.
 tags: projects learning
 categories: config
 giscus_comments: true
-featured: true
+featured: false
 ---
 
 Greetings, Everyone,
