--- a/_posts/2024-06-3-absa.md
+++ b/_posts/2024-06-3-absa.md
@@ -3,8 +3,8 @@ layout: post
 title: "Building an Aspect Based Sentiment Analysis System"
 date: 2024-06-2 14:00:00
 description: Aspect based system using machine learning and IMDB movie review dataset.
-tags: projects learning
-categories: config
+tags: projects, learning, uow
+categories: learning
 giscus_comments: true
 featured: true
 ---
