--- a/_posts/2024-06-29-database.md
+++ b/_posts/2024-06-29-database.md
@@ -9,5 +9,53 @@ giscus_comments: true
 featured: true
 ---
 
+## CSIT882 - Data Management Systems
 
-test
+This subject proved to be relatively straightforward, covering fundamental concepts in data management without introducing anything particularly groundbreaking. Below, I provide a brief overview of the key topics covered in the lecture notes:
+
+1. **00Overview.pdf**: Summarizes the key topics and objectives of the course.
+2. **01Introduction.pdf**: Introduces fundamental database concepts and their significance.
+3. **01graphdatamodels.pdf**: Discusses graph data models for representing data as nodes and edges, useful for applications like social networks.
+4. **02DatabaseDesign.pdf**: Covers principles for designing databases, including schema creation and data organization.
+5. **02ERmodels.pdf**: Focuses on Entity-Relationship (ER) models for visualizing data and relationships.
+6. **03advancedobjectmodeling.pdf**: Explores advanced techniques in object modeling beyond basic object-oriented concepts.
+7. **03objectdatamodel.pdf**: Examines object data models integrating object-oriented programming concepts into databases.
+8. **04conceptualModeling.pdf**: Addresses conceptual modeling techniques for abstract database representations.
+9. **04designpatterns.pdf**: Discusses design patterns for solving common database design problems.
+10. **05FunctionalDependencies.pdf**: Explains functional dependencies and their impact on database structure.
+11. **05relationaldatamodel.pdf**: Covers the relational data model, organizing data into tables (relations) with rows and columns.
+12. **06DerivationsOfFunctionalDependencies.pdf**: Looks into functional dependencies' derivations and their effects on database normalization.
+13. **06logicaldesign.pdf**: Focuses on translating conceptual models into logical schemas.
+14. **07DatabaseNormalization_1.pdf**: Introduces database normalization to reduce redundancy and improve data integrity.
+15. **07databasedesignquality.pdf**: Discusses criteria for high-quality database design, including efficiency and maintainability.
+16. **08DatabaseNormalization_2.pdf**: Continues the normalization discussion with additional normal forms.
+17. **08introductiontosql.pdf**: Introduces SQL (Structured Query Language) for querying and manipulating relational databases.
+18. **09IntroductionToTransactionProcessing_1.pdf**: Explains transaction processing basics, including ACID properties and concurrency control.
+19. **09sqlddl.pdf**: Covers SQL Data Definition Language (DDL) commands for defining and modifying database structures.
+20. **10IntroductionToTransactionProcessing_2.pdf**: Delves into advanced transaction processing aspects, including recovery and management.
+21. **10sqldml.pdf**: Focuses on SQL Data Manipulation Language (DML) commands for querying and manipulating data.
+22. **11demoRollbackCommitTransaction.pdf**: Demonstrates SQL commands for rolling back and committing transactions.
+23. **12TransactionProcessingInSQL (1).pdf**: Explores transaction processing specifics in SQL.
+24. **12TransactionProcessingInSQL.pdf**: Continues the topic of transaction processing with further examples and explanations.
+25. **12select-2.pdf**: Discusses advanced SQL SELECT statements, including complex queries and data retrieval.
+26. **13NoSQL.pdf**: Introduces NoSQL databases and their models, including document, key-value, column, and graph databases.
+27. **13select-3.pdf**: Covers additional advanced SQL SELECT queries, including joins, subqueries, and set operations.
+28. **14select-4.pdf**: Continues advanced SQL SELECT topics with more examples and use cases.
+29. **15select-5.pdf**: Further explores advanced SQL SELECT statements and techniques for efficient data retrieval.
+30. **16views.pdf**: Discusses SQL views, which are virtual tables created from queries to simplify complex queries and manage data security.
+31. **17advancedddlanddml.pdf**: Examines advanced DDL and DML concepts, including complex database definitions and manipulation techniques.
+32. **18archreldbserver.pdf**: Covers the architecture of relational database servers, including query processors and storage managers.
+33. **19dbsecurity.pdf**: Discusses database security measures to protect data from unauthorized access and breaches.
+34. **20discraccesscontrol.pdf**: Focuses on discretionary access control, granting permissions based on user roles.
+35. **21usermanagement.pdf**: Covers user management, including creating and managing user accounts and permissions.
+36. **22dataintegrity.pdf**: Discusses data integrity to ensure accuracy and consistency throughout data lifecycle.
+37. **23datavulnerabilities.pdf**: Examines vulnerabilities in data management systems and common threats.
+38. **24databaseauditing.pdf**: Explores database auditing practices for monitoring and recording activities.
+39. **25dataprivacy.pdf**: Focuses on data privacy concerns and regulations to protect personal and sensitive data.
+40. **26legalethicaldatamanagement.pdf**: Discusses legal and ethical considerations in data management, including compliance with laws and ethical standards.
+
+### Overall Review
+
+I was able to achieve a distinction with relatively little effort. Although the course was not particularly challenging, it provided valuable insights, particularly into object modeling.
+
+[Lectures](assets/pdf/DB.zip)
