--- a/_posts/2024-06-29-database.md
+++ b/_posts/2024-06-29-database.md
@@ -5,8 +5,8 @@ date: 2024-06-29 18:00:01
 description: My Learning on CSIT882
 tags: projects learning uow
 categories: learning
-giscus_comments: true
-featured: true
+giscus_comments: false
+featured: false
 ---
 
 ## CSIT882 - Data Management Systems
