--- a/_posts/2024-06-29-database.md
+++ b/_posts/2024-06-29-database.md
@@ -11,7 +11,7 @@ featured: false
 
 ## CSIT882 - Data Management Systems
 
-This subject proved to be relatively straightforward, covering fundamental concepts in data management without introducing anything particularly groundbreaking. Below, I provide a brief overview of the key topics covered in the lecture notes:
+This subject proved to be relatively straightforward, covering fundamental concepts in data management without introducing anything particularly groundbreaking. Below, I have provided a brief overview of the key topics covered in the lecture notes.
 
 1. **00Overview.pdf**: Summarizes the key topics and objectives of the course.
 2. **01Introduction.pdf**: Introduces fundamental database concepts and their significance.
