--- a/_posts/2024-07-24-sose-week1.md
+++ b/_posts/2024-07-24-sose-week1.md
@@ -1,5 +1,3 @@
-Here’s a refined version of the blog post:
-
 ---
 
 layout: post  
@@ -19,10 +17,17 @@ featured: false
 
 ### Core Concepts
 
+Certainly, Vatsa! Here’s how you can incorporate the concept of a **Service Registry** into your explanation of Service-Oriented Architecture (SOA):
+
+---
+
 **Service-Oriented Architecture (SOA)** is the backbone of SOC, guiding the organization of software applications into a cohesive framework. SOA provides a structured way to reorganize applications, enabling services to be composed, discovered, and consumed effectively.
 
 - **Service Providers**: Organizations that offer services. They handle the procurement, implementation, and support of these services.
 - **Service Clients**: Applications or users that consume services, which can be internal or external to the organization.
+- **Service Registry**: The Service Registry acts as a centralized directory where services are registered by service providers.
+
+The service provider, service discovery agency, and service requestor (client) interact through three key operations: publish, find, and bind.
 
 ### Key Characteristics of Services
 
@@ -61,3 +66,28 @@ SOA restructures previously isolated software applications into an interconnecte
 
 **Service Specification** allows for the design and integration of services without requiring knowledge of their internal implementations. This abstraction enables reliable service composition based on defined interfaces and interactions.
 
+
+**The Limitations of Basic SOA and the Role of Extended SOA (ESOA)**
+
+Basic Service-Oriented Architecture (SOA) often falls short in addressing broader concerns like management, service orchestration, transaction management, coordination, security, and other cross-cutting concerns that affect all components within a service architecture. To tackle these challenges, Extended SOA (ESOA) comes into play.
+
+<img src="/assets/img/Service-Oriented-Computing-Concepts-Characteristics-and-Directions-pdf.png" alt="Machine Vision" width="500"/>
+
+**Service Composition in ESOA**
+
+The service composition layer in ESOA plays a crucial role in consolidating multiple services into a single, cohesive composite service. This layer ensures that the necessary roles and functionalities are in place to seamlessly integrate these services.
+
+**The Role of Service Aggregators**
+
+Within ESOA, a service aggregator acts as a service provider that combines services from various other providers into a distinct, value-added offering. This aggregation not only enhances the overall service value but also simplifies access for the service requestors.
+
+**Managed Services in ESOA**
+
+To effectively manage critical applications and specific markets, ESOA introduces managed services within the service management layer, represented at the top of the ESOA pyramid. This layer is crucial for maintaining the integrity and performance of vital solutions.
+
+**Grid Services and the Service Grid Bus**
+
+ESOA’s service management layer leverages grid services to create an enabling infrastructure for systems and applications. This infrastructure, known as the service grid bus (SGB), provides a high-level abstraction and management framework. It allows services within an open marketplace to function cohesively as a unified entity and collaborate effectively with other services. The SGB addresses critical application and system management concerns, ensuring end-to-end quality of service within dynamic virtual marketplaces.
+
+[Lecture 1](/assets/pdf/sose/1.Subject%20Introduction%20-%20SOC%20Preliminaries.pdf)
+[Paper](/assets/pdf/sose/Service%20-Oriented%20Computing%20-%20Concepts,%20Characteristics%20and%20Directions.pdf)
