fixed file path

--- a/_posts/2024-07-4-network.md
+++ b/_posts/2024-07-4-network.md
@@ -48,7 +48,7 @@ Adding to the irony, I had prior experience as a network engineer before coming 
 
 In retrospect, I should have managed my time better, chosen my team more carefully, and taken a more disciplined approach to studying.
 
-[Lectures](/assets/pdf/Network.zip)
-[Project](/assets/pdf/Secure%20On-demand%20Health%20Services.pdf)
-[PPT](/assets/pdf/SOHS.pdf)
-[Essay](/assets/pdf/Automation%20in%20IT%20systems%20for%20Corporation.pdf)
+[Lectures](/assets/pdf/network/Network.zip)
+[Project](/assets/pdf/network/Secure%20On-demand%20Health%20Services.pdf)
+[PPT](/assets/pdf/network/SOHS.pdf)
+[Essay](/assets/pdf/network/Automation%20in%20IT%20systems%20for%20Corporation.pdf)
