--- a/_posts/2024-07-24-sose-week1.md
+++ b/_posts/2024-07-24-sose-week1.md
@@ -1,7 +1,7 @@
 ---
 
 layout: post  
-title: "Introduction to Service-Oriented Computing (SOC)"  
+title: "CSCI927 Service-Oriented Software Engineering Week 1"  
 date: 2024-06-24 08:30:00  
 description: An overview of Service-Oriented Computing (SOC), its principles, and its application in modern software architecture.  
 tags: projects learning uow  
