--- a/_posts/2024-08-07-sose-week3.md
+++ b/_posts/2024-08-07-sose-week3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "CSCI927 Service-Oriented Software Engineering Week 3"
+title: "CSCI927 - Service-Oriented Software Engineering Week 3"
 date: 2024-07-07 08:30:00
 description: BPMN
 tags: projects learning uow
