--- a/_posts/2024-07-31-sose-week2.md
+++ b/_posts/2024-07-31-sose-week2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "CSCI927 Service-Oriented Software Engineering Week 2"
+title: "CSCI927 - Service-Oriented Software Engineering Week 2"
 date: 2024-06-21 08:30:00
 description: Service Modeling
 tags: projects learning uow
