added extra material

--- a/_posts/2024-07-4-python.md
+++ b/_posts/2024-07-4-python.md
@@ -149,3 +149,5 @@ The course is excellent for beginners new to Python programming, providing a sol
 ### My Thoughts
 
 While I do feel a bit of regret that the course content was relatively basic for my level, it has been a useful refresher and reinforced my Python skills. On the bright side, Python is now my primary language, and the course has served its purpose in solidifying my foundation.
+
+[Lectures](/assets/pdf/python/PYTHON-CSIT881.zip)
