--- a/_posts/2024-07-4-web.md
+++ b/_posts/2024-07-4-web.md
@@ -24,3 +24,4 @@ I achieved a High Distinction in this course with relatively little effort. Howe
 I found XML DTD to be quite interesting, though it may not be as relevant in today’s web development landscape.
 
 [Lectures](/assets/pdf/web/Web.zip)
+[Lab Work](/assets/pdf/web/labwork.zip)
