--- a/_posts/2025-04-29-sose-rest.md
+++ b/_posts/2025-04-29-sose-rest.md
@@ -1,16 +1,32 @@
 ---
 
 layout: post  
-title: "CSCI927 - Service-Oriented Software Engineering Rest"  
+title: "CSCI927 - Service-Oriented Software Engineering"  
 date: 2025-04-28 15:09:00  
-description: "CSCI927 - Service-Oriented Software Engineering Rest"  
-tags: projects learning uow
+description: "CSCI927 - Service-Oriented Software Engineering Overview"  
+tags: projects, learning, uow  
 categories: learning  
 giscus_comments: true  
 featured: false  
 
 ---
 
-Rest can be found in raw notes
+I’m currently writing this in my fourth semester.
 
-https://karangoel59.com/assets/raw_notes/***
+I haven’t had the chance to convert my raw notes into a proper format yet, so here’s a brief overview instead.
+
+### Likes:
+
+This is a great subject for me, especially since I worked as a DevOps engineer before, so topics like microservice architecture are quite close to my heart.
+
+One of my favorite parts of the course was learning about Archimate. It’s such a useful diagramming tool when working in corporate settings. Sadly, my previous company didn’t use it, but I can see how beneficial it would be for structuring complex systems.
+
+### Dislikes:
+
+There’s not much I can complain about. The project was engaging, and I enjoyed the hands-on experience. However, the exam was a bit of a challenge, and I just managed to pass it. I think there’s room for improvement in that area.
+
+You can find my notes [here](https://karangoel59.com/assets/raw_notes/*).
+
+---
+
+This version adds more structure and flow, making it easier to read while keeping it conversational. Let me know if you'd like further tweaks!
