--- a/_posts/2025-04-29-sofe.md
+++ b/_posts/2025-04-29-sofe.md
@@ -11,4 +11,6 @@ featured: false
 
 ---
 
-Currently taking this course
+Currently taking this course in UOW.
+
+First assignment did not went much well, hope second will be good.
