--- a/_posts/2025-04-29-sose-rest.md
+++ b/_posts/2025-04-29-sose-rest.md
@@ -26,6 +26,4 @@ One of my favorite parts of the course was learning about Archimate. It’s such
 There’s not much I can complain about. The project was engaging, and I enjoyed the hands-on experience. However, the exam was a bit of a challenge, and I just managed to pass it. I think there’s room for improvement in that area.
 
 
----
-
-This version adds more structure and flow, making it easier to read while keeping it conversational. Let me know if you'd like further tweaks!
+[Link to the Report](/assets/pdf/sose/report__1_.pdf)
