--- a/_posts/2025-05-02-cpplibs.md
+++ b/_posts/2025-05-02-cpplibs.md
@@ -1,10 +1,9 @@
 ---
 layout: post
-title: CSCI926 - Software Testing and Analysis
+title: Cpp Libs
 date: 2025-05-02 22:25:00
 description: 
-tags:
-  - learning
+tags: learning code
 categories: learning
 giscus_comments: true
 featured: false
