--- a/_posts/2024-07-4-network.md
+++ b/_posts/2024-07-4-network.md
@@ -1,16 +1,16 @@
 ---
 
 layout: post  
-title: CSIT985 - Strategic Network Design  
+title: Strategic Network Design  
 date: 2024-07-04 18:00:01  
-description: My Learning on CSIT985  
+description: My Learning on Strategic Network 
 tags: projects learning uow  
 categories: learning  
 giscus_comments: false  
 featured: false  
 ---
 
-### My Learning from CSIT985 - Strategic Network Design
+### My Learning from Strategic Network Design
 
 1. **Networking Fundamentals**: Introduction to the basics of networking, including key concepts, protocols, and technologies essential for understanding network operations.
 
