--- a/_posts/2024-07-4-python.md
+++ b/_posts/2024-07-4-python.md
@@ -1,9 +1,9 @@
 ---
 
 layout: post  
-title: CSIT881 - Programming and Data Structures  
+title: Programming and Data Structures  
 date: 2024-07-04 18:00:01  
-description: My Learning on CSIT881  
+description: My Learning on Programming  
 tags: projects learning uow  
 categories: learning  
 giscus_comments: false  
@@ -13,7 +13,7 @@ featured: false
 
 ### My Learning on Python
 
-The CSIT881 course provided a foundational understanding of Python programming and data structures. Although some concepts covered were quite basic, it was a valuable review and reinforcement of key principles. Here’s a comprehensive breakdown of what was covered in the course:
+The Programming course provided a foundational understanding of Python programming and data structures. Although some concepts covered were quite basic, it was a valuable review and reinforcement of key principles. Here’s a comprehensive breakdown of what was covered in the course:
 
 ### 1. **Basic Concepts**
    - **Syntax and Semantics**
