--- a/_posts/2024-07-4-web.md
+++ b/_posts/2024-07-4-web.md
@@ -1,9 +1,9 @@
 ---
 
 layout: post  
-title: CSIT884 - Web Development  
+title: Web Development  
 date: 2024-07-04 18:00:01  
-description: My Learning on CSIT884  
+description: My Learning on Web  
 tags: projects learning uow  
 categories: learning  
 giscus_comments: false  
@@ -11,7 +11,7 @@ featured: false
 
 ---
 
-## CSIT884 - Web Development
+## Web Development
 
 This course focused exclusively on frontend development.
 
