--- a/_posts/2024-07-22-big-data.md
+++ b/_posts/2024-07-22-big-data.md
@@ -2,17 +2,11 @@
 layout: post  
 title: "Big Data Analytics"  
 date: 2025-04-28 15:09:00  
-description: "Comprehensive notes and reflections on Big Data Analytics (Weeks 1–4)"  
+description: "Comprehensive notes and reflections on Big Data Analytics"  
 tags: projects learning uow  
 categories: learning  
 giscus_comments: true  
 featured: false  
----
-
-I’m currently writing this in my fourth semester.
-
-I haven’t had the chance to fully convert all my raw notes into a polished format yet, so this post serves as a consolidated overview of **Big Data Analytics**, covering Weeks 1 to 4 along with some personal reflections.
-
 ---
 
 ## Course Overview & Reflection
@@ -30,7 +24,7 @@ Overall, this is a solid subject with no major negatives. I found some parts rep
 
 ---
 
-## Week 1: Introduction to Big Data
+## Introduction to Big Data
 
 ### Sources of Big Data
 
@@ -83,7 +77,7 @@ Big Data isn’t just about size. It’s commonly described using several key ch
 
 ---
 
-## Week 2: Data Lifecycle in Big Data Projects
+## Data Lifecycle in Big Data Projects
 
 ### Key Stages of the Data Lifecycle
 
@@ -136,7 +130,7 @@ Big Data isn’t just about size. It’s commonly described using several key ch
 
 ---
 
-## Week 3: Data Exploration & Preparation
+## Data Exploration & Preparation
 
 ### Data Analytics Lifecycle
 
@@ -190,7 +184,7 @@ Big Data isn’t just about size. It’s commonly described using several key ch
 
 ---
 
-## Week 4: Hypothesis Testing & Clustering
+## Hypothesis Testing & Clustering
 
 ### Hypothesis Testing Techniques
 
