--- a/_posts/2024-01-17-blog.md
+++ b/_posts/2024-01-17-blog.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Embarking on a New Journey: My First Blog Post"
+title: "My First Blog Post"
 date: 2024-01-17 15:09:00
 description: Documenting my exploration in the realms of projects, learning, and self-discovery.
-tags: projects learning
-categories: diary
+tags: projects learning reflections
+categories: personal
 giscus_comments: true
 featured: false
 ---
