--- a/_posts/2024-01-18-dev-env.md
+++ b/_posts/2024-01-18-dev-env.md
@@ -3,8 +3,8 @@ layout: post
 title: "Unveiling My Unique Dev Environment"
 date: 2024-01-18 15:09:00
 description: Discover the intricacies of my personalized development setup.
-tags: projects learning
-categories: projects
+tags: projects learning reflections coding
+categories: personal
 giscus_comments: true
 featured: false
 ---
