--- a/_posts/2024-07-4-network.md
+++ b/_posts/2024-07-4-network.md
@@ -4,8 +4,8 @@ layout: post
 title: Strategic Network Design  
 date: 2024-07-04 18:00:01  
 description: My Learning on Strategic Network 
-tags: projects learning uow  
-categories: learning  
+tags: learning reflections computerscience network projects
+categories: uow  
 giscus_comments: false  
 featured: false  
 ---
