--- a/_posts/2024-07-4-python.md
+++ b/_posts/2024-07-4-python.md
@@ -4,8 +4,8 @@ layout: post
 title: Programming and Data Structures  
 date: 2024-07-04 18:00:01  
 description: My Learning on Programming  
-tags: projects learning uow  
-categories: learning  
+tags: learning reflections computerscience coding
+categories: uow  
 giscus_comments: false  
 featured: false  
 
