--- a/_posts/2024-07-4-web.md
+++ b/_posts/2024-07-4-web.md
@@ -4,8 +4,8 @@ layout: post
 title: Web Development  
 date: 2024-07-04 18:00:01  
 description: My Learning on Web  
-tags: projects learning uow  
-categories: learning  
+tags: learning reflections computerscience coding web 
+categories: uow  
 giscus_comments: false  
 featured: false  
 
