--- a/_posts/2025-04-29-crypto.md
+++ b/_posts/2025-04-29-crypto.md
@@ -3,8 +3,8 @@ layout: post
 title: "Modern Cryptography"  
 date: 2025-04-28 15:09:00  
 description: "Modern Cryptography – Course Overview and Weekly Notes"  
-tags: projects learning uow  
-categories: learning  
+tags: learning reflections computerscience crypto 
+categories: uow  
 giscus_comments: true  
 featured: false  
 ---
