--- a/_posts/2025-05-02-cpplibs.md
+++ b/_posts/2025-05-02-cpplibs.md
@@ -3,8 +3,8 @@ layout: post
 title: Cpp Libs
 date: 2025-05-02 22:25:00
 description: 
-tags: learning code
-categories: learning
+tags: learning coding
+categories: personal
 giscus_comments: true
 featured: false
 ---
