--- a/_posts/2024-07-22-big-data.md
+++ b/_posts/2024-07-22-big-data.md
@@ -3,8 +3,8 @@ layout: post
 title: "Big Data Analytics"  
 date: 2025-04-28 15:09:00  
 description: "Comprehensive notes and reflections on Big Data Analytics"  
-tags: projects learning uow  
-categories: learning  
+tags: learning reflections computerscience bigdata ml
+categories: uow  
 giscus_comments: true  
 featured: false  
 ---
