--- a/_posts/2025-04-29-sose.md
+++ b/_posts/2025-04-29-sose.md
@@ -3,8 +3,8 @@ layout: post
 title: "Service-Oriented Software Engineering"  
 date: 2025-04-28 15:09:00  
 description: "Comprehensive notes and reflections on Service-Oriented Software Engineering"  
-tags: projects learning uow   
-categories: learning  
+tags: learning reflections computerscience devops
+categories: uow  
 giscus_comments: true  
 featured: false  
 ---
